<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_action"
        app:actionViewClass ="androidx.appcompat.widget.SearchView"
        app:showAsAction ="collapseActionView|ifRoom" />
    <item
        android:id="@+id/edit_action"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_action"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/delete_action"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share_action"
        android:icon="@drawable/ic_share"
        android:title="@string/share_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/create_pdf_action"
        android:title="@string/create_pdf_action" />
    <item
        android:id="@+id/print_action"
        android:title="@string/print_action" />
    <item
        android:id="@+id/send_action"
        android:title="@string/send_action" />
    <item
        android:id="@+id/mark_as_paid_action"
        android:title="@string/mark_as_paid_action" />
    <item
        android:checkable="true"
        android:checked="false"
        android:title="@string/Mostrar_consumo" />

</menu>
